fixed alignment in 626px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,15 +187,15 @@ form {
 		float:none;
 	}
 	aside {
-		width: 500px;
+		width: 580px;
 		float: none;
 		clear: both;
 	}
 	article {
-		width: 500px;
+		width: 580px;
 	}
 	img {
-		width: 430px;
+		width: 500px;
 		height: auto;
 	}
 	nav a {
@@ -211,14 +211,16 @@ form {
 		float: none;
 	}
 	.portf {
-		width: 410px;
+		width: 500px;
 		height: auto;
 		/*text-align: center;*/
 	}
-	.portftitle {
-		width: 410px;
+	.portftitle	{
+		width: 480px;
+		top: 300px;
+		font-size: 3em;
 	}
 	.logo {
-		margin: 10px 10px 10px 60px;
+		margin: 10px 10px 10px 88px;
 	}
 }
